# HaikangXiling

./: LICENSE  README.md
pointscloudprocessing/: CMakeLists.txt  main.cpp
storepointscloud/: CMakeLists.txt  main.cpp
storepointscloud/Include/: Mv3dRgbdDefine.h
storepointscloud/Lib/win32/: Mv3dRgbd.lib
storepointscloud/common/: RenderImage.hpp  common.hpp
storepointscloud/common/include/: RenderWindow.hpp
